--- a/public/style.css
+++ b/public/style.css
@@ -137,7 +137,8 @@ a {
 }
 
 .logoimg {
-  border-radius: 50px;
+  height: 150px;
+  width: 150px;
 }
 
 .noscroll {
@@ -440,6 +441,10 @@ textarea {
   width: 100%;
   margin: auto;
   background-color: #fff;
+}
+
+.socials > * {
+  cursor: pointer;
 }
 
 .text {
